sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() 
{
	var temp=0
	var i=1
	var v=0
	var last=0
	while(i<getNombreValeurs())
	{
		last=i
		v=getValeur(i)
		for(k<- 1 to i)
		{
			if(getValeur(i-k)>v)
			{
				copie(i-k,i-k+1)
				last=i-k
			}
			else
				k=i
		}
		setValeur(last,v)
		i=i+1
	}
}
